fixed navbar overflow when changing viewport size issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,8 +185,9 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 30%;
+    width: fit-content;
     height: 50%;
+    overflow: hidden;
     
 }
 .nav-btns{
